# nexus-package

./: .gitignore  .nojekyll  _quarto.yml  config.yaml  index.html  nexus.html  nexus.ipynb  nexus_marimo.py  pyproject.toml  robots.txt  sitemap.xml  utils.py
.github/workflows/: publish.yml
_freeze/scratchpad/quarto-live/execute-results/: html.json
_site/: index.html  nexus.html  search.json
_site/scratchpad/: explore.html  quarto-live.html
scratchpad/: explore.html  explore.ipynb  quarto-live.html  quarto-live.qmd  quarto_and_fasthtml.qmd
tools/: __init__.py  _quarto.yml  datamap.py  filter_pivot.py
