[project]
name = "nexus-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.31.0",
    "pandas",
    "ibis-framework[duckdb]",
    "pyarrow",
    "jupyter",
    "altair[all]",
    "ipykernel",
    "marimo>=0.14.11",
    "great-tables>=0.18.0",
]